# video-management-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  download-test-video.sh  pyproject.toml
templates/: index.html
